k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-platform-api
  namespace: cloud-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloud-platform-api

  template:
    metadata:
      labels:
        app: cloud-platform-api

    spec:
      containers:
        - name: cloud-platform-api
          image: ghcr.io/ajoshuajeberson/cloud-platform-api:38ec763c7a02e3d9bf88b76f0e2ed8eb9dd7b59e
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
