k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloud-platform-api
  namespace: cloud-platform

spec:
  selector:
    app: cloud-platform-api

  ports:
    - port: 80
      targetPort: 8080

  type: NodePort
